# C-C-

./: README.md
ex1/: README  README.md  cipher.c  main.c  tests.c
ex2/: CMakeLists.txt  ProductBST.c  ProductBST.h  README
ex2/school_tests/: build.sh  delete_ex.txt  main.c  pres_1  pres_2  pres_3  presubmit.in.txt  products_s.txt  products_s_b.txt  products_s_ex.txt  products_s_zn.txt  products_s_zn_ex.txt  school  test.sh
ex3.part -1/: CMakeLists.txt  README  README.md  eee  justdoit_tweets.txt  markov_chain.c  markov_chain.h  tweets_generator.c
ex3b.part-2/: CMakeLists.txt  README  _new_generic_type.c  linked_list.c  makefile  markov_chain.c  markov_chain.h  oh_tests_helpers.c  oh_tests_helpers.h  snakes_and_ladders  snakes_and_ladders.c  tweets_generator  tweets_generator.c
ex4/: Activation.cpp  Activation.h  CMakeLists.txt  Dense.cpp  Dense.h  Makefile  Matrix.cpp  Matrix.h  MlpNetwork.cpp  MlpNetwork.h  README  main.cpp
ex4/tests/: main.cpp
ex5/: CMakeLists.txt  Movie.cpp  Movie.h  README  README.md  RSUser.cpp  RSUsersLoader.cpp  RSUsersLoader.h  RecommenderSystem.cpp  RecommenderSystem.h  RecommenderSystemLoader.cpp  RecommenderSystemLoader.h  main.cpp  presubmit.cpp
ex6/: CMakeLists.txt  Dictionary.hpp  HashMap.hpp  Presubmit.hpp  README  main.cpp
